# pssa

./: CMakeLists.txt  fmt.cmake  gen-checks.py  gen-csmith.py  test-with-csmith.py  test-with-yarpgen.py
include/pssa/: ControlDependence.h  Inserter.h  Lower.h  PSSA.h  VectorHashInfo.h  Visitor.h
include/utils/: OrderedList.h
include/vegen/: GlobalSLP.h  Heuristics.h  InstSema.h  Lower.h  MatchManager.h  MatchingUtil.h  Pack.h  Packer.h  TestReductionLowering.h
lib/: CMakeLists.txt  ControlDependence.cpp  ControlDependence.h  LICM.cpp  LICM.h  Lower.cpp  Lower.h  Opts.cpp  Opts.h  PSSA.cpp  PSSA.h  PSSAEntry.cpp  Passes.cpp  VLoop.cpp  VLoop.h
lib/pssa/: BlockBuilder.cpp  BlockBuilder.h  CMakeLists.txt  ControlDependence.cpp  Inserter.cpp  Lower.cpp  PSSA.cpp  PSSAEntry.cpp
lib/vegen/: AddrUtil.cpp  AddrUtil.h  CMakeLists.txt  ConditionUserTracker.cpp  ConditionUserTracker.h  DependenceChecker.cpp  DependenceChecker.h  GlobalSLP.cpp  Heuristics.cpp  Heuristics.h  InstructionDescriptor.cpp  InstructionDescriptor.h  ItemMover.h  LoopUnrolling.cpp  LoopUnrolling.h  LooseInstructionTable.cpp  LooseInstructionTable.h  Lower.cpp  MatchManager.cpp  Matcher.cpp  Matcher.h  Pack.cpp  PackSet.cpp  PackSet.h  Packer.cpp  Reducer.cpp  Reducer.h  Reduction.cpp  Reduction.h  Scalarizer.cpp  Scalarizer.h  TestReductionLowering.cpp  TestVectorGen.cpp  TripCount.cpp  TripCount.h  UnrollFactor.cpp  UnrollFactor.h  Versioning.cpp  Versioning.h  WrappedDependenceInfo.cpp  (+1 more)
lib/vegen/x86/: x86.cpp
test/: lit.cfg
test/csmith/: 0.c  1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  20.c  21.c  22.c  23.c  24.c  26.c  27.c  28.c  29.c  3.c  30.c  31.c  32.c  33.c  34.c  36.c  37.c  39.c  4.c  40.c  41.c  42.c  43.c  44.c  45.c  46.c  47.c  48.c  (+49 more)
test/licm/: crash.ll
test/lowering/: bug.ll  bug2.ll  crash.ll  crash2.ll
test/vegen/lowering/: add.ll  addr-spec.ll  blend.ll  co-it-nested.ll  co-it.ll  even-odd.ll  fft4.ll  find.ll  find2.ll  gather-with-mask.ll  gather.ll  gep.ll  no-addr-spec.ll  phi.ll  phi2-full.ll  phi2-partial.ll  phi2-vcmp.ll  phi2.ll  shuffle.ll
test/vegen/non-simd/: addsubps.ll  packssdw.ll  pmaddwd.ll
test/vegen/reduction/analysis/: conditional-rdx.ll  duplicates.ll  early-exits.ll  indvars.ll  loop-rdx.ll  no-loop-rdx.ll  rdx-2d.ll  rdx.ll  sum-2d-unroll4.ll
test/vegen/reduction/analysis/liveness/: phi-conds.ll  prefix.ll  sum.ll
test/vegen/reduction/lowering/: dot2.ll  loop-rdx-conditional.ll  loop-rdx-full.ll  loop-rdx.ll  partial-vec-loop.ll  partial-vec.ll  pmaddwd-acc.ll  pmaddwd-acc2.ll  rdx.ll  sum-2d-interchanged.ll  sum-2d-scalar.ll  sum-2d.ll  sum-conditional.ll
test/vegen/reduction/lowering/non-simd/: dot-vpdpwssd.ll  dot.ll  pmaddwd.ll  vpdpbusd.ll  vpdpwssd-commuted.ll  vpdpwssd.ll
test/vegen/reduction/vectorize/: namd-rdx.ll  pmaddwd.ll  s3113.ll  s352.c  sum-2d.ll  vpdpbusd.ll
test/vegen/speculation/analysis/: s174-outer.ll  s174.ll
test/vegen/speculation/lowering/: conditional-stores.ll  dropping-inbounds.ll  multiple-conds.ll  nested.ll  nested2.ll  over-versioning.ll  phis-with-alias.ll  phis.ll  s174-outer.ll  s174.ll
test/vegen/speculation/vectorize/: add_filt_fmask.ll  batched-versioning.ll  check-promotion.ll  check-with-ptr2int.ll  cond-licm.ll  cond-licm2.ll  hoist-cond-bug.ll  namd.ll  no-ver.ll  no-ver2.ll  no-ver3.ll  no-ver4.ll  phis-with-alias.ll  s174-loop.ll  versioned-rdx.ll  yarpgen-10027.ll
test/vegen/vectorize/: addr-spec.ll  adi.ll  and-one.ll  bt-compute_rhs.ll  c-cif-nested-continue.ll  c-for-unif-test-vary-break.ll  c-test-108.ll  c-test-133.ll  c-test-134.ll  different-loop-depths.ll  interleave.ll  no-vec.ll  no-vec2.ll  patch-scalar-mu.ll  s271.ll  s274.ll  s441.ll  unroll.ll  vec.ll  vec2.ll  vif.ll
unittests/: CMakeLists.txt  OrderedListsTest.cpp
utils/: pssa-clang.in  pssa-opt.in  vegen-clang.in
